# ai-readiness-kg

./: .gitignore  README.md  controls.yaml  dixie_evidence.yaml  pyproject.toml  seldon.yaml  seldon_events.jsonl
cc_tasks/: 2026-07-02_discovery_scan.md  2026-07-02_manifest_module.md  2026-07-02_scaffold_repo.md  2026-07-03_bulk_acquisition.md  2026-07-03_bulk_acquisition_v2.md  2026-07-03_cisco_inbox_add.md  2026-07-03_cisco_inbox_add_v2.md  2026-07-03_extraction_module.md  2026-07-03_pilot_extraction_run.md  2026-07-03_pilot_extraction_run_v2.md  2026-07-03_pilot_extraction_run_v3.md  2026-07-03_pilot_extraction_run_v4.md  2026-07-03_pilot_extraction_run_v5.md  2026-07-03_pilot_manifest_adds.md  2026-07-03_schema_v02_promotion_rebaseline.md  2026-07-03_schema_v02_promotion_v2.md  2026-07-05_airkg_bulk_extraction_v1.md  2026-07-05_airkg_bulk_extraction_v1_RESULT.md  2026-07-16_finish_bulk_extraction_v1_remaining8.md  2026-07-16_finish_bulk_extraction_v1_remaining8_RESULT.md
corpus/: manifest.json  manifest.v1.json
corpus/evidence/: decisions.jsonl  reconciliation.json  (+1 more)
docs/: design_decisions.md  schema_v0.1.md
events/: batch-001.jsonl  batch-002.jsonl  batch-003.jsonl  batch-004.jsonl
kg/: __init__.py  eventlog.py  manifest.py  schema.yaml
scripts/: accept_two_acts.py  build_projection.py  run_baseline_gates.py  run_bulk_extraction.py
tests/: conftest.py  test_eventlog.py  test_extraction_grounding.py  test_extraction_model_stub.py  test_extraction_parser.py  test_extraction_pipeline.py  test_extraction_schema_pairs.py  test_manifest.py
(+131 files in other folders)
