[project]
name = "ai-readiness-kg"
version = "0.1.0"
description = "Validity-layer knowledge graph under the FSS AI readiness survey and definitions work."
requires-python = ">=3.10"
# Runtime deps. pyyaml reads kg/schema.yaml's nested node/edge catalogue in the extraction
# module (eventlog/manifest stay stdlib-only). The Anthropic client is NOT a hard dependency:
# the extraction model runs on Claude Max OAuth and is imported lazily only at pilot runtime.
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
